--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <p>My Logo</p>
+        </div>
+        <div class="header-title">
+            <h1>Personal training</h1>
+        </div>
+    </header>
+    <footer>
+        <div class="social-media">
+            <a href="https://www.twitter.com" target="_blank"><img src="images/twitter.jpg" ></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.jpg" ></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.jpg" ></a>
+        </div>
+        <div class="contact-info">
+            <p>Phone: <a href="tel:1234567890">1234567890</a></p>
+            <p>Email: <a href="mailto:personaltraining@email.com">personaltraining@email.com</a></p>
+            <p>All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
