--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
             <h1>Personal training</h1>
         </div>
     </header>
+    <div class="main-content">
+        <div class="training-option">
+            <img src="images/pilates.jpg">
+            <h3>Pilates</h3>
+        </div>
+        <div class="training-option">
+            <img src="images/yoga.jpg">
+            <h3>Yoga</h3>
+        </div>
+        <div class="training-option">
+            <img src="images/strength.jpg">
+            <h3>Strength</h3>
+        </div>
+    </div>
     <footer>
         <div class="social-media">
             <a href="https://www.twitter.com" target="_blank"><img src="images/twitter.jpg" ></a>
